# heddle

./: .env.example  .gitignore  .taplo.toml  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  biome.json  bunfig.toml  compatibility.md  ipc-types.ts  justfile  package.json
.github/workflows/: ci.yml
docs/: config.md  discovery.md  headless.md  hooks.md
schemas/: config.schema.json  hooks.schema.json
scripts/: build.ts  check-protocol-version.sh  export-schemas.ts  sync-ipc.sh
src/: debug.rs  debug.ts  index.ts  lib.rs  schema_export.rs  tui.rs  types.rs  types.ts
src/agent/: architect.rs  architect.ts  loop.ts  loop_.rs  mod.rs  types.rs  types.ts
src/agents/: loader.rs  (+2 more)
test/: debug.test.ts  types.test.ts
tests/: agent_architect.rs  agent_loop.rs  agent_loop_cancel.rs  agent_loop_negative.rs  agent_loop_permissions.rs  agent_loop_streaming.rs  agent_multi_turn.rs  agent_plan_mode.rs  agents_loader.rs  checkpoints_diff.rs  checkpoints_io.rs  checkpoints_restore.rs  cli_completer.rs  cli_mentions.rs  cli_oneshot.rs  cli_shell.rs  commands_builtins.rs  commands_loader.rs  commands_registry.rs  config_agents_md.rs  config_discovery.rs  config_features.rs  config_loader.rs  config_paths.rs  config_skills.rs  config_types.rs  context_pruning.rs  cost_pricing.rs  cost_tracker.rs  debug.rs  e2e_simple_task.rs  file_history_backup.rs  file_history_cleanup.rs  file_history_meta.rs  file_history_restore.rs  headless_basic.rs  headless_heartbeat.rs  headless_replay.rs  headless_send.rs  helpers_sandbox.rs  (+48 more)
ts-src/: index.ts  types.ts
ts-test/: debug.test.ts
(+333 files in other folders)
