[package]
name = "heddle"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "heddle"
path = "src/lib.rs"

[[bin]]
name = "heddle"
path = "src/bin/heddle.rs"

[[bin]]
name = "heddle-headless"
path = "src/bin/headless.rs"

[[bin]]
name = "export-schemas"
path = "src/bin/export_schemas.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
futures = "0.3"
html2text = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
regex = "1"
globset = "0.4"
walkdir = "2"
dirs = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
rand = "0.8"
async-trait = "0.1"
atty = "0.2"
url = "2"
rustyline = "14"
once_cell = "1"
parking_lot = "0.12"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
percent-encoding = "2"
schemars = "0.8"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
